Fix vertical align of hamburger and logo

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -91,9 +91,6 @@ $nav-border-bottom: 1px solid rgba(#23201b, 0.10);
   top: 138px;
 }
 .navbar {
-  .navbar-brand {
-    display: flex;
-  }
   background-color: white;
   .container {
     @include media-breakpoint-up(lg) {
@@ -120,6 +117,10 @@ $nav-border-bottom: 1px solid rgba(#23201b, 0.10);
     border-bottom: 1px solid $nav-gold;
   }
 }
+
+ .navbar-brand {
+   padding-top: 0.8rem;
+ }
 
 .navbar-brand > svg {
   width: 50px;
@@ -497,7 +498,6 @@ $fade-in-duration: 1s;
     justify-content: center !important;
     .navbar-nav {
       align-items: center;
-     
       .nav-item {
         &.home-link {
           display: inline;
@@ -513,7 +513,6 @@ $fade-in-duration: 1s;
 
 .navbar-toggler {
   &.navbar-toggler-right {
-    
     &[aria-expanded=true] {
       z-index: 400;
       .navbar-toggler-icon {
